# Video-Codec-Visualizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
core/: CMakeLists.txt
core/include/ivcv/core/: Block.h  BlockPartitioner.h  ChromaSubsampler.h  ChromaSubsamplingMode.h  ColorSpaceConverter.h  ImageBuffer.h  ImageLoader.h  PipelineContext.h  PipelineStage.h
core/src/: BlockPartitioner.cpp  ChromaSubsampler.cpp  ColorSpaceConverter.cpp  ImageLoader.cpp  PipelineContext.cpp
docs/: ARCHITECTURE.md  ROADMAP.md  SRS.md
modules/block_partitioning/: README.md
modules/chroma_subsampling/: README.md
modules/color_space/: README.md
tests/: CMakeLists.txt
tests/core/: BlockPartitionerTest.cpp  ChromaSubsamplerTest.cpp  ColorSpaceConverterTest.cpp  ImageBufferTest.cpp  PipelineContextTest.cpp
ui/: BlockGridPanel.cpp  BlockGridPanel.h  BlockPartitioningView.cpp  BlockPartitioningView.h  CMakeLists.txt  ChromaSubsamplingView.cpp  ChromaSubsamplingView.h  RgbYuvView.cpp  RgbYuvView.h
